@@ -280,6 +280,8 @@ EAPI void ecore_wince_window_hide(Ecore_WinCE_Window *window);
 EAPI void ecore_wince_window_title_set(Ecore_WinCE_Window *window,
                                        const char         *title);
 
+EAPI void ecore_wince_window_focus(Ecore_WinCE_Window *window);
+
 EAPI void ecore_wince_window_backend_set(Ecore_WinCE_Window *window, int backend);
 
 EAPI void ecore_wince_window_suspend_cb_set(Ecore_WinCE_Window *window, int (*suspend_cb)(int));
